crates/cot-cli/tests/snapshot_testing/new/snapshots/cli__snapshot_testing__new__create_new_project_with_custom_name.snap
---
source: cot-cli/tests/snapshot_testing/new/mod.rs
description: "Verbosity level: off"
info:
  program: cot
  args:
    - new
    - "--name"
    - my_project
    - "-q"
    - /tmp/cot-test-bx0SKp/project
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
[1m[92m    Creating[0m Cot project `my_project`
[1m[32m     Created[0m Cot project `my_project`
